manifests/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: monsterstack
spec:
  ports:
    - port: 5000  # port exposé en entrée par le service
      targetPort: 5000 # port coté conteneur
  selector:
    app: monsterstack # kubernetes.io/name: 
    partie: frontend # kubernetes.io/component:
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: monsterstack
spec:
  selector:
    matchLabels:
      app: monsterstack
      partie: frontend
  strategy:
    type: RollingUpdate
  replicas: 8
  template:
    metadata:
      labels:
        app: monsterstack
        partie: frontend
        label: inconnu
    spec:
      containers:
        - name: frontend
          image: docker.io/tecpi/frontend:1.0
          ports:
          - containerPort: 5000
          livenessProbe:
            tcpSocket: # si le socket est ouvert c'est que l'application est démarrée
              port: 5000
            initialDelaySeconds: 5 # wait before firt probe
            timeoutSeconds: 1 # timeout for the request
            periodSeconds: 10 # probe every 10 sec
            failureThreshold: 3 # fail maximum 3 times
          readinessProbe:
            httpGet:
              path: /healthz # si l'application répond positivement sur sa route /healthz c'est qu'elle est prête pour le traffic
              port: 5000
              httpHeaders:
                - name: Accept
                  value: application/json
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "200m" # 10% de proc
              memory: "100Mi"
            limits:
              cpu: "200m" # 30% de proc
              memory: "100Mi"
