manifests/imagebackend.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagebackend
  labels:
    app: monsterstack
spec:
  ports:
    - port: 8080  # port exposé en entrée par le service
      targetPort: imagebackend # port coté conteneur
  selector:
    app: monsterstack # kubernetes.io/name: 
    partie: imagebackend # kubernetes.io/component: 
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagebackend
  labels:
    app: monsterstack
    partie: imagebackend
spec:
  selector:
    matchLabels:
      app: monsterstack
      partie: imagebackend
  strategy:
    type: RollingUpdate
  replicas: 5
  template:
    metadata:
      labels:
        app: monsterstack
        partie: imagebackend
    spec:
      containers:
        - image: amouat/dnmonster:1.0
          name: imagebackend
          ports:
            - containerPort: 8080
              name: imagebackend
